--- a/css/style.css
+++ b/css/style.css
@@ -1,279 +1,109 @@
 /*css andrea*/
   /*partier nav*/
-html {
-  background-image: url(../img/bg.jpg);
-}
-.topnav {
-  overflow: hidden;
-  font-size: 18px;
-}
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  padding: 16px;
-  text-decoration: none;
-  font-size: 30px;
-}
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-/*.topnav a.active {
-  color: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
-  font-weight: bold;
-  font-size:2rem;
-  float:left;
-}*/
-
-.topnav .icon {
-  display: none;
-}
-/*animation sur logo*/
-.active {
-  -webkit-animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	        animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-          font-family: "anton", sans serif;
-          letter-spacing: 0.4rem;
-        }
-@-webkit-keyframes tracking-in-contract-bck {
-  0% {
-    letter-spacing: 3em;
-    -webkit-transform: translateZ(400px);
-            transform: translateZ(400px);
-    opacity: 0;
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
   }
-  40% {
-    opacity: 0.6;
+  .navbar {
+    font-size: 18px;
+    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-bottom: 10px;
   }
-  100% {
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-    opacity: 1;
-  }
-}
-@keyframes tracking-in-contract-bck {
-  0% {
-    letter-spacing: 1em;
-    -webkit-transform: translateZ(400px);
-            transform: translateZ(400px);
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-    opacity: 1;
-  }
-}
-/*fin animation logo*/
-body {
-	margin: 0;
-	padding: 0;
-  background-image:url(../img/bg.jpg);
-}
-header {
-	width: 100%;
-	padding: 15px;
-	box-sizing: border-box;
-  border-bottom: 3px solid #FFCE00;
-}
-h1 {
-		color: #F3F3F3;
-		font-size: 28px;
-		line-height: 1;
-		font-weight: 300;
-		text-align: center;
-		margin: 0;
-    margin-bottom: 15px;
-  }
-.form {
-    display: flex;
-    flex-direction: column;
-		width: 100%;
-    margin-left:1.1rem;
-    padding-right:Orem;
-    height: 80px;
-}
-#generatorpart {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 8rem;
-  width: 40%;
-  margin-left:2rem;
-  margin-right:2rem;
-  margin-top:3rem;
-  background-color: black;
-}
-input {
-  display: flex;
-  flex-direction: column;
-	font-size: 20px;
-  text-indent: 15px;
-  width: 83%;
-}
-input:active {
-  background-color: #FFCE00;
-}
-button {
-  display: flex;
-  flex-direction: column;
-	width: 30px;
-	height: 35px;
-	border: none;
-	outline: none;
-  background-color: #FFCE00;
-  color: #171717;
-  font-size: 24px;
-}
-.form button:active{
-  background-color:#e6b900;
-}
-#list {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	height: 17px;
-  width: 90%;
-  margin-right:0.5rem;
-  max-height: 500px;
-  margin:20px;;
-}
-.list-item {
-  display: flex;
-	flex-direction: column;
-	justify-content: center;
-	height: 10px;
-	background: #FFFFFF;
-  border-bottom: 1px solid #FFCE00;
-  width: 100%;
-  padding:150px;
-  box-sizing: border-box;
-  padding: 17px;
-  text-align: center;
-  font-size: 18px;
-}
-#generator {
-  display: flex;
-  flex-direction: column;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-  align-items: center;
-}
-#generator  button {
-	margin: 15px 0px;
-	width: 90%;
-	font-weight: 700;
-}
-#generator > button:active {
-  background-color:#e6b900;
-}
-#generated {
-	box-sizing: border-box;
-	width: 90%;
-  padding: 20px;
-	background-color: #FFFFFF;
-	text-align: center;
-  font-size: 18px;
-}
-
- 
-  @media (max-width: 480px) {
- button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left:10px;
-  margin-right:0px;
- }
- .submit{
-  display: flex;
-	flex-direction: column;
-	justify-content: center;
-  size:15px;
-  margin-left:12px;
-  margin-right:120px;
-
- }
-input{
-height: 40px;
-width: 70%;
-padding-right: 0px;
- }
- #list, .list-item {
-  display: flexbox;
-	flex-direction: column;
-  margin-left:6px;
- }
- .topnav a.icon {
-  font-size:24px;
-}
- .topnav {
-   float: right;
- }
- #generatorpart {
-  margin-left:2px;
-  width:90%;
-  margin-right:50px;
- }
- #generator button {
-  display: flex;
-	flex-direction: column;
-	justify-content: center;
-  margin-top:140px;
- }
- 
   
-
-  .topnav.responsive {
-   position: absolute;
-  }
-  .topnav.responsive .icon {
-  position: relative;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    text-align: left;
-  }
-  .topnav a:not(:first-child) {
+  .main-nav {
+    list-style-type: none;
     display: none;
   }
-  .topnav a.icon {
+  
+  .nav-links,
+  .logo {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.7);
+  }
+  
+  .main-nav li {
+    text-align: center;
+    margin: 15px auto;
+  }
+  
+  .logo {
+    display: inline-block;
+    font-size: 22px;
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+  
+  .navbar-toggle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 24px;
+  }
+  
+  #chkToggle {
+    display: none;
+  }
+  
+  #chkToggle:checked + ul.main-nav {
+    display: block;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .navbar {
       display: flex;
-      
+      justify-content: space-between;
+      padding-bottom: 0;
+      height: 70px;
+      align-items: center;
     }
+  
+    #chkToggle:checked + ul.main-nav {
+      display: flex;
+    }
+  
+    .main-nav {
+      display: flex;
+      margin-right: 30px;
+      flex-direction: row;
+      justify-content: flex-end;
+    }
+  
+    .main-nav li {
+      margin: 0;
+    }
+  
+    .nav-links {
+      margin-left: 40px;
+    }
+  
+    .logo {
+      margin-top: 0;
+    }
+  
+    .navbar-toggle {
+      display: none;
+    }
+  
+    .logo:hover,
+    .nav-links:hover {
+      color: rgba(255, 255, 255, 1);
+    }
+  }
+.logo {
+  font-family: "anton", sans serif;
+  display: inline-block;
+  font-size: 40px;
+  margin-top: 10px;
+  margin-left: 20px;
 }
+
 /* fin css andrea*/
 
-  /*smooth*/
-  .module {
-    scroll-behavior: [ auto | smooth ];
-   /*flex*/
-  }
-  html, body: {
-    font-family: "Merriweather", sans serif;
-    margin:0;
-    padding:0;
-  }
-  .fullpage {
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content:space-between;
-    margin:0 auto;
-    position:absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-  }
-.content {
-  z-index: 5;
- }
+  
   .middle {
     padding-left: 10px;
     padding-top:20px;
@@ -283,13 +113,11 @@ padding-right: 0px;
     -webkit-animation: color-change-2x 10s linear infinite alternate both;
 	  animation: color-change-2x 10s linear infinite alternate both;
   }
-  .header {
+  /*.header {
   height:50px;
   background-color: #b22cff;
-  }
-  .navbar{
-  z-index: 100;
-  }
+  }*/
+  
   .sidebar {
     width:40rem;
     margin:0px;
@@ -307,436 +135,7 @@ padding-right: 0px;
     display:flex;
     flex-direction:column;
     justify-content:center;
-    position:absolute;
-    z-index: 30;
+    
   
   }
-  /*anim fd*/
-  @-webkit-keyframes color-change-2x {
-    0% {
-      background: #19dcea;
-    }
-    100% {
-      background: #b22cff;
-    }
-  }
-  @keyframes color-change-2x {
-    0% {
-      background: #19dcea;
-    }
-    100% {
-      background: #b22cff;
-    }
-  }
   
-    /*animation main*/
-    .motion {
-    -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
-            animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
-  }
-  
-  @-webkit-keyframes shake-horizontal {
-    0%,
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-    }
-    10%,
-    30%,
-    50%,
-    70% {
-      -webkit-transform: translateX(-10px);
-              transform: translateX(-10px);
-    }
-    20%,
-    40%,
-    60% {
-      -webkit-transform: translateX(10px);
-              transform: translateX(10px);
-    }
-    80% {
-      -webkit-transform: translateX(8px);
-              transform: translateX(8px);
-    }
-    90% {
-      -webkit-transform: translateX(-8px);
-              transform: translateX(-8px);
-    }
-  }
-  @keyframes shake-horizontal {
-    0%,
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-    }
-    10%,
-    30%,
-    50%,
-    70% {
-      -webkit-transform: translateX(-10px);
-              transform: translateX(-10px);
-    }
-    20%,
-    40%,
-    60% {
-      -webkit-transform: translateX(10px);
-              transform: translateX(10px);
-    }
-    80% {
-      -webkit-transform: translateX(8px);
-              transform: translateX(8px);
-    }
-    90% {
-      -webkit-transform: translateX(-8px);
-              transform: translateX(-8px);
-    }
-  
-  }
-  /*telephone avec main*/
-  #callTOaction{
-  font-family: "Merriweather", sans serif;
-  font-size: 1.8em;
-  position:absolute;
-  top: 31.5rem;
-  right: 17rem; 
-  }
-button:focus {outline-style:none;
-  }
-  #cellphone{
-    text-align: center;
-    position:relative;
-    box-align: center;
-    }
-  
-  #noms{filter: blur(7px);
-    font-family: "anton", sans serif;
-    font-size: 2.5em;
-    color: bisque;
-    top: 9rem;
-    right: 17rem;
-    position:absolute;
-  }
-  p{
-  font-size: 28px;
- 
-}
- /*style du bouton type Iphone*/
-
-  input[type=button], input[type=submit], input[type=reset], button, .button {
-    padding: 5px 15px;
-    margin: 3px 4px;
-    display: inline-block;
-    color: #959191;
-    font-size: 26px;
-    cursor: pointer;
-    background: #FFFFFF;
-    background: linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    background: -moz-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    background: -webkit-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    background: -o-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    border: 1px solid #9D9999;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-    -moz-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-    -webkit-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-    -o-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-  }
-  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover, button:hover, .button:hover {
-    background: linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-    background: -moz-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-    background: -webkit-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-    background: -o-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-  }
-  input[type=button]:active, input[type=submit]:active, input[type=reset]:active, button:active, .button:active{
-    opacity:0.8;
-  }
-.logoanim{
-  z-index: 2;
-  padding-top: 30%;
-  padding-bottom: 10%;
-  width: 55%;
-  animation: infinite;
-  animation-timing-function: ease-out;
-  transform-origin: bottom center;
-  animation-name: intensifies;
-  animation-duration: 5s;
-  opacity: 0.3;
-}
-
-/**
- * Intensifies
- * - Slowly increases in shaking and madness
- */
- @keyframes intensifies {
-  0% {
-    transform: translate(1px, 1px) scale(1);
-  }
-  1% {
-    transform: translate(-1px, -1px) scale(1.02);
-  }
-  2% {
-    transform: translate(1px, 2px) scale(1.04);
-  }
-  3% {
-    transform: translate(-3px, -1px) scale(1.06);
-  }
-  4% {
-    transform: translate(3px, 3px) scale(1.08);
-  }
-  5% {
-    transform: translate(-4px, -5px) scale(1.1);
-  }
-  20% {
-    transform: translate(12px, 7px) scale(1.4);
-  }
-  21% {
-    transform: translate(-11px, -13px) scale(1.42);
-  }
-  22% {
-    transform: translate(4px, 22px) scale(1.44);
-  }
-  23% {
-    transform: translate(-13px, -24px) scale(1.46);
-  }
-  24% {
-    transform: translate(23px, 5px) scale(1.48);
-  }
-  25% {
-    transform: translate(-15px, -16px) scale(1.5);
-  }
-  26% {
-    transform: translate(16px, 7px) scale(1.52);
-  }
-  27% {
-    transform: translate(-25px, -11px) scale(1.54);
-  }
-  28% {
-    transform: translate(25px, 20px) scale(1.56);
-  }
-  29% {
-    transform: translate(-16px, -20px) scale(1.58);
-  }
-  30% {
-    transform: translate(12px, 23px) scale(1.6);
-  }
-  31% {
-    transform: translate(-15px, -18px) scale(1.62);
-  }
-  32% {
-    transform: translate(3px, 27px) scale(1.64);
-  }
-  33% {
-    transform: translate(-18px, -14px) scale(1.66);
-  }
-  34% {
-    transform: translate(14px, 9px) scale(1.68);
-  }
-  35% {
-    transform: translate(-28px, -23px) scale(1.7);
-  }
-  36% {
-    transform: translate(12px, 30px) scale(1.72);
-  }
-  37% {
-    transform: translate(-25px, -27px) scale(1.74);
-  }
-  38% {
-    transform: translate(39px, 1px) scale(1.76);
-  }
-  39% {
-    transform: translate(-10px, -32px) scale(1.78);
-  }
-  40% {
-    transform: translate(15px, 35px) scale(1.8);
-  }
-  41% {
-    transform: translate(-27px, -15px) scale(1.82);
-  }
-  42% {
-    transform: translate(15px, 41px) scale(1.84);
-  }
-  43% {
-    transform: translate(-39px, -4px) scale(1.86);
-  }
-  44% {
-    transform: translate(34px, 19px) scale(1.88);
-  }
-  45% {
-    transform: translate(-4px, -45px) scale(1.9);
-  }
-  46% {
-    transform: translate(38px, 7px) scale(1.92);
-  }
-  47% {
-    transform: translate(-21px, -1px) scale(1.94);
-  }
-  48% {
-    transform: translate(19px, 6px) scale(1.96);
-  }
-  49% {
-    transform: translate(-49px, -25px) scale(1.98);
-  }
-  50% {
-    transform: translate(25px, 25px) scale(2);
-  }
-  51% {
-    transform: translate(-33px, -24px) scale(2.02);
-  }
-  52% {
-    transform: translate(45px, 36px) scale(2.04);
-  }
-  53% {
-    transform: translate(-44px, -7px) scale(2.06);
-  }
-  54% {
-    transform: translate(30px, 28px) scale(2.08);
-  }
-  55% {
-    transform: translate(-4px, -27px) scale(2.1);
-  }
-  56% {
-    transform: translate(17px, 18px) scale(2.12);
-  }
-  57% {
-    transform: translate(-4px, -12px) scale(2.14);
-  }
-  58% {
-    transform: translate(1px, 50px) scale(2.16);
-  }
-  59% {
-    transform: translate(-8px, -36px) scale(2.18);
-  }
-  60% {
-    transform: translate(29px, 26px) scale(2.2);
-  }
-  61% {
-    transform: translate(-24px, -21px) scale(2.22);
-  }
-  62% {
-    transform: translate(60px, 21px) scale(2.24);
-  }
-  63% {
-    transform: translate(-9px, -36px) scale(2.26);
-  }
-  64% {
-    transform: translate(44px, 1px) scale(2.28);
-  }
-  65% {
-    transform: translate(-38px, -40px) scale(2.3);
-  }
-  66% {
-    transform: translate(42px, 33px) scale(2.32);
-  }
-  67% {
-    transform: translate(-17px, -45px) scale(2.34);
-  }
-  68% {
-    transform: translate(1px, 17px) scale(2.36);
-  }
-  69% {
-    transform: translate(-20px, -62px) scale(2.38);
-  }
-  70% {
-    transform: translate(6px, 53px) scale(2.4);
-  }
-  71% {
-    transform: translate(-64px, -14px) scale(2.42);
-  }
-  72% {
-    transform: translate(67px, 48px) scale(2.44);
-  }
-  73% {
-    transform: translate(-47px, -39px) scale(2.46);
-  }
-  74% {
-    transform: translate(5px, 62px) scale(2.48);
-  }
-  75% {
-    transform: translate(-29px, -50px) scale(2.5);
-  }
-  76% {
-    transform: translate(5px, 60px) scale(2.52);
-  }
-  77% {
-    transform: translate(-51px, -76px) scale(2.54);
-  }
-  78% {
-    transform: translate(58px, 16px) scale(2.56);
-  }
-  79% {
-    transform: translate(-79px, -32px) scale(2.58);
-  }
-  80% {
-    transform: translate(41px, 22px) scale(2.6);
-  }
-  81% {
-    transform: translate(-43px, -48px) scale(2.62);
-  }
-  82% {
-    transform: translate(35px, 65px) scale(2.64);
-  }
-  83% {
-    transform: translate(-65px, -84px) scale(2.66);
-  }
-  84% {
-    transform: translate(62px, 73px) scale(2.68);
-  }
-  85% {
-    transform: translate(-48px, -40px) scale(2.7);
-  }
-  86% {
-    transform: translate(30px, 25px) scale(2.72);
-  }
-  87% {
-    transform: translate(-16px, -46px) scale(2.74);
-  }
-  88% {
-    transform: translate(81px, 73px) scale(2.76);
-  }
-  89% {
-    transform: translate(-79px, -76px) scale(2.78);
-  }
-  90% {
-    transform: translate(55px, 62px) scale(2.8);
-  }
-  91% {
-    transform: translate(-44px, -56px) scale(2.82);
-  }
-  92% {
-    transform: translate(46px, 91px) scale(2.84);
-  }
-  93% {
-    transform: translate(-48px, -34px) scale(2.86);
-  }
-  94% {
-    transform: translate(18px, 10px) scale(2.88);
-  }
-  95% {
-    transform: translate(-11px, -4px) scale(2.9);
-  }
-  96% {
-    transform: translate(14px, 80px) scale(2.92);
-  }
-  97% {
-    transform: translate(-29px, -54px) scale(2.94);
-  }
-  98% {
-    transform: translate(51px, 95px) scale(2.96);
-  }
-  99% {
-    transform: translate(-1001px, -4px) scale(2.98);
-  }
-  100% {
-    transform: translate(0, 0) rotate(0deg);
-  }
-}
-
-.intensifies {
-  animation-timing-function: ease-out;
-  transform-origin: bottom center;
-  animation-name: intensifies;
-  animation-duration: 5s;
-}
