--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 /*smooth*/
 .module {
   scroll-behavior: [ auto | smooth ];
- /*flex*/
+
 }
+
+ /*flex*/
 html, body {
-  font-family: "Merriweather", sans serif;
+  font-family: "roboto", sans serif;
   margin:0;
   padding:0;
 }
@@ -13,14 +15,32 @@ html, body {
   flex-direction: column;
   justify-content:space-between;
   margin:0 auto;
-  position:absolute;
   top:0;
   bottom:0;
   left:0;
   right:0;
 }
 .content {
-z-index: 5;
+  padding-bottom: 2rem;
+
+}
+.container{
+  position: absolute;
+}
+.boite{
+  position: absolute;
+  padding-left: 25%;
+  padding-right: 20%;
+  width: fit-content;
+}
+.secouezmoi{
+  width: fit-content;
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+}
+.personnage1{
+  -webkit-animation: shake-horizontal 0.4s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.3s 2 both;
+  animation: shake-horizontal 0.4s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.3s 2 both;
 }
 .middle {
   padding-left: 10px;
@@ -31,30 +51,27 @@ z-index: 5;
   -webkit-animation: color-change-2x 10s linear infinite alternate both;
   animation: color-change-2x 10s linear infinite alternate both;
 }
-.header {
+header {
 height:50px;
 background-color: #b22cff;
 }
 .navbar{
-z-index: 100;
+
 }
 .sidebar {
   margin:0px;
   padding:0px;
 
 }
-.footer {
+footer {
   padding:0px;
   margin:0px;
   background-color:#CCCCCC;
   text-align:center;
-  height:2rem;	
+  height:50px;	
   display:flex;
   flex-direction:column;
   justify-content:center;
-  position:absolute;
-  z-index: 30;
-
 }
 /*anim fd*/
 @-webkit-keyframes color-change-2x {
@@ -76,8 +93,12 @@ z-index: 100;
 
   /*animation main*/
   .motion {
-  -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
-          animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
+  -webkit-animation: shake-horizontal 0.4s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.3s 2 both;
+          animation: shake-horizontal 0.4s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.3s 2 both;
+}
+.motion2 {
+  -webkit-animation: shake-horizontal 0.7s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.2s 2 both;
+          animation: shake-horizontal 0.7s cubic-bezier(0.755, 0.030, 0.515, 0.955) 0.2s 2 both;
 }
 
 @-webkit-keyframes shake-horizontal {
@@ -139,26 +160,36 @@ z-index: 100;
 }
 /*telephone avec main*/
 #callTOaction{
-font-family: "Merriweather", sans serif;
+font-family: "roboto", sans serif;
 font-size: 1.8em;
-position:absolute;
-top: 24.2rem;
-right: 15rem;
+
+color:#fff;
+border-radius: 10px;
+padding: 15px;
+border-width: 2px;
+border-color: #fff;
+background: none;
+}
+#callTOaction:hover{
+  background-position: right center; 
+
+
 }
 button:focus {outline-style:none;
 }
 #cellphone{
-  position:relative;
+  display: flex;
+  align-items: center;
+  position: relative;
   }
-
+.hand{
+  display:flex; 
+}
 #noms{filter: blur(7px);
   font-family: "anton", sans serif;
   font-size: 2.5em;
   color: bisque;
-  top: 9rem;
-  right: 15rem;
-  position:absolute;
-  text-align: center;
+  width: fit-content;
 }
 p{
 font-size: 28px;
@@ -166,49 +197,12 @@ font-size: 28px;
 }
 /*style du bouton type Iphone*/
 
-input[type=button], input[type=submit], input[type=reset], button, .button {
-  padding: 5px 15px;
-  margin: 3px 4px;
-  display: inline-block;
-  color: #959191;
-  font-size: 26px;
-  cursor: pointer;
-  background: #FFFFFF;
-  background: linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-  background: -moz-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-  background: -webkit-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-  background: -o-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-  border: 1px solid #9D9999;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-  -moz-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-  -webkit-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-  -o-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-}
-input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover, button:hover, .button:hover {
-  background: linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-  background: -moz-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-  background: -webkit-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-  background: -o-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-}
-input[type=button]:active, input[type=submit]:active, input[type=reset]:active, button:active, .button:active{
-  opacity:0.8;
-}
 .logoanim{
 z-index: 2;
 padding-top: 30%;
 padding-bottom: 0%;
 padding-right: 10%;
 width: 25%;
-animation: infinite;
-animation-timing-function: ease-out;
-transform-origin: bottom left;
-animation-name: intensifies;
-animation-duration: 5s;
-opacity: 0.3;
 }
 
 /**
@@ -377,11 +371,52 @@ opacity: 0.3;
 }
 67% {
   transform: translate(-17px, -45px) scale(2.34);
-
-
 }
 100% {
   transform: translate(0, 0) rotate(0deg);
 }
 
+}
+
+* ----------------------------------------
+* animation slide-out-X
+* ----------------------------------------
+*/
+@-webkit-keyframes slideoutX {
+  0% {
+    -webkit-transform: translateX(500);
+            transform: translateX(500);
+    opacity: 0;
+  }
+ 50% {
+   -webkit-transform: translateX(-1000);
+           transform: translateX(-1000);
+   opacity: 1;
+ }
+ 100% {
+   -webkit-transform: translateX(-2000px);
+           transform: translateX(-2000px);
+   opacity: 0;
+ }
+}
+@keyframes slideoutX {
+  0% {
+    -webkit-transform: translateX(500);
+            transform: translateX(500);
+    opacity: 0;
+  }
+ 50% {
+   -webkit-transform: translateX(-1000);
+           transform: translateX(-1000);
+   opacity: 1;
+ }
+ 100% {
+   -webkit-transform: translateX(-2000px);
+           transform: translateX(-2000px);
+   opacity: 0;
+ }
+}
+.slideoutX {
+	-webkit-animation: slideoutX 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: slideoutX 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
