--- a/css/style.css
+++ b/css/style.css
@@ -191,13 +191,13 @@ font-size: 28px;
 }
 /*style du bouton type Iphone*/
 
-.logoanim{
+/*.logoanim{
 z-index: 2;
 padding-top: 30%;
 padding-bottom: 0%;
 padding-right: 10%;
 width: 25%;
-}
+}*/
 
 /**
 * Intensifies
@@ -415,116 +415,287 @@ animation slide-out-X
 	        animation: slideoutX 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
+.middle {
+  padding-left: 10px;
+  padding-top:20px;
+  display:flex;
+  justify-content:space-around;
+  flex-wrap: wrap;
+  -webkit-animation: color-change-2x 10s linear infinite alternate both;
+  animation: color-change-2x 10s linear infinite alternate both;
+}
+/*.header {
+height:50px;
+background-color: #b22cff;
+}*/
+
+.sidebar {
+  width:40rem;
+  margin:0px;
+  padding:0px;
+  align-content: center;
+  text-align: center;
+  box-align: center;
+}
+.footer {
+  padding:0px;
+  margin:0px;
+  background-color:#CCCCCC;
+  text-align:center;
+  height:2rem;	
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  
+
+}
+
 
 
 /*nouveau css pour nav*/
-header {
-  background-color: #fff;
-}
-.banner-area {
-  max-width: 960px;
-  margin:0 auto;
-  color: #000;
-  margin-right: 55px;
-}
-.menu-area h1 {
-  padding:10px;
-  text-align: center;
-}
-.menu-area {
-display: flex;
-list-style: none;
-}
-.menu-area li {
-  background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);;
-  flex:1;
-  text-align: center;
-  color: white;
+
+a{
+	text-decoration: none;
+  color: #eee;
+  display: flex;
+  flex-direction: row;
   font-size: 15px;
-  text-align: center;
-  
-}
-.menu-area li:not(:first-child) {
-  border-left: 2px solid #fff;
-  border-right:2px solid #fff;
-  box-shadow:8px 4px 4px #CCCCCC;
-}
-.menu-area li:not(:last-child) {
-  border-right: 2px solid #fff;
-  border-left: 2px solid #fff;
-  box-shadow:8px 4px 4px  #CCCCCC;
-}
-.menu-area li:hover {
-  background-color: #333;
-}
-.menu-area li a {
-  display: block;
-  padding:15px 0;
-  color: inherit;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-input[type=checkbox], .res-menu {
-  display: none;
-}
-@media screen and (max-width 600px) {
-  .res-menu {
-    display: flex;
-    justify-content: center;
-    background-color: #000;
-    cursor: pointer;
-    padding:20px 0;
-    text-transform: uppercase;
-  }
-  .menu-area {
-    display: none;
-  }
-  input[type=checkbox]:checked ~.menu-area {
-    display: block;
-  }
-  .menu-area li:not(:last-child) {
-    border:0;
-  }
-  .menu-area li:not(:last-child) {
-    margin:2px 0;
-  }
 }
 
+header{
+	width: 100%;
+	height: 100vh;
+	background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.5)), url("https://images.unsplash.com/photo-1523374228107-6e44bd2b524e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80") center no-repeat;
+  height: 130px;
+	position: relative;
+  overflow: hidden;
+}
+.middle {
+  display: flex;
+  justify-content: flex-end;
+}
+.container{
+	max-width: 120rem;
+	width: 90%;
+	margin: 0 auto;
+}
+
+.menu-toggle{
+	position: fixed;
+	top: 2.5rem;
+	right: 2.5rem;
+	color: #eeeeee;
+	font-size: 3rem;
+	cursor: pointer;
+	z-index: 1000;
+	display: none;
+}
+h1 {
+  font-size: 2rem;
+}
+nav{
+	padding-top: 0.2rem;
+	display: flex;
+	justify-content: space-around;
+	align-items: flex-start;
+	text-transform: uppercase;
+	font-size: 1.6rem;
+}
+
+.brand{
+	font-size: 3.1rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+	transform: translateX(-100rem);
+  animation: slideIn .5s forwards;
+}
+
+.brand span{
+	color: crimson;
+}
+
+nav ul{
+	display: flex;
+}
+
+nav ul li{
+	list-style: none;
+	transform: translateX(100rem);
+	animation: slideIn .5s forwards;
+}
+
+nav ul li:nth-child(1){
+	animation-delay: 0s;
+}
+
+nav ul li:nth-child(2){
+	animation-delay: .5s;
+}
+
+nav ul li:nth-child(3){
+	animation-delay: 1s;
+}
+
+nav ul li:nth-child(4){
+	animation-delay: 1.5s;
+}
+
+nav ul li a{
+	padding: 1rem 0;
+	margin: 0 3rem;
+	position: relative;
+	letter-spacing: 2px;
+}
+
+nav ul li a:last-child{
+	margin-right: 0;
+}
+
+nav ul li a::before,
+nav ul li a::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: crimson;
+	left: 0;
+	transform: scaleX(0);
+	transition: all .5s;
+}
+
+nav ul li a::before{
+	top: 0;
+	transform-origin: left;
+}
+
+nav ul li a::after{
+	bottom: 0;
+	transform-origin: right;
+}
+
+.overlay{
+  background-color: rgba(0,0,0,.95);
+  height: 280px;
+	right: 0;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	transition: opacity 650ms;
+	transform: scale(0);
+	opacity: 0;
+  display: none;
+}
+
+nav ul li a:hover::before,
+nav ul li a:hover::after{
+	transform: scaleX(1);
+}
+
+@keyframes slideIn {
+	from{
+
+	}
+	to{
+		transform: translateX(0);
+	}
+}
+
+@media screen and (max-width: 700px){
+  .menu-toggle{
+    display: none;
+	}
+  .container{
+    max-width: 0rem;
+    width: 10%;
+    margin: 0 auto;
+  }
+	nav{
+		padding-top: 0;
+		display: none;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		height: 100px;
+		text-align: center;
+	}
+
+	nav ul{
+		flex-direction: column;
+	}
+
+	nav ul li{
+    margin-top: 5px;
+  
+	}
+
+	nav ul li a{
+		margin: 0;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+	}
+
+	.brand{
+		font-size: 1rem;
+	}
+  
+  .overlay .menu-open, nav .menu-open{
+    display: flex;
+    flex-direction: column;
+	  transform: scale(1);
+	  opacity: 1;
+  }
+  
+}
+@media (min-width: 310px){
+
+	.menu-toggle{
+    display: block;
+	}
+  .container{
+    max-width: 0rem;
+    width: 10%;
+    margin: 0 auto;
+  }
+	nav{
+		padding-top: 0;
+		display: none;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		height: 10px;
+		text-align: center;
+	}
+
+	nav ul{
+		flex-direction: column;
+	}
+
+	nav ul li{
+    margin-top: 5px;
+  display: block;
+	}
+
+	nav ul li a{
+		margin: 0;
+    font-size: 1rem;
+    display: block;
+    flex-direction: column;
+	}
+
+	.brand{
+		font-size: 1rem;
+	}
+  
+  .overlay .menu-open, nav .menu-open{
+    display: flex;
+    flex-direction: row;
+	  transform: scale(1);
+	  opacity: 1;
+  }
+  
+}
 /* fin css andrea*/
 
   
-  .middle {
-    padding-left: 10px;
-    padding-top:20px;
-    display:flex;
-    justify-content:space-around;
-    flex-wrap: wrap;
-    -webkit-animation: color-change-2x 10s linear infinite alternate both;
-	  animation: color-change-2x 10s linear infinite alternate both;
-  }
-  /*.header {
-  height:50px;
-  background-color: #b22cff;
-  }*/
   
-  .sidebar {
-    width:40rem;
-    margin:0px;
-    padding:0px;
-    align-content: center;
-    text-align: center;
-    box-align: center;
-  }
-  .footer {
-    padding:0px;
-    margin:0px;
-    background-color:#CCCCCC;
-    text-align:center;
-    height:2rem;	
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    
-  
-  }
- 
